atualização ranking css

--- a/index.html
+++ b/index.html
@@ -32,20 +32,48 @@
     </nav>
   </header>
   <script src="js/menu.js"></script>
-  
+ 
+
   <div class="center">
-      <img src="img/Robo.png" id="robo">
-        <div class="comeceaqui"> 
-          <a href="paginas/login.php"><img src="img/comeceaqui.jpg" alt="" width="100%" ></a>
-        </div>
-      
-    </div>
-  
-  <div class="sobrenos">
-    <img src="img/sobrenos.png" alt="" width="100%">
+    <img src="img/Robo.png" id="robo">
     
   </div>
   
+  <div class="ranking" >
+    <h1>Ranking <img src="img/trofeu-removebg-preview.png" alt="" width="30px" height="30px"></h1>
+    <br>
+    <img src="img/primeiro-removebg-preview.png" alt="" width="30px" height="30px">
+    <br>
+    <br>
+    <input type="text">
+    <img src="img/segundo-removebg-preview.png" alt="" width="30px" height="30px">
+    <br>
+    <br>
+    <input type="text">
+    <img src="img/terceiro-removebg-preview.png" alt="" width="30px" height="30px">
+    <br>
+    <br>
+    <input type="text">
+    <img src="img/quarto2-removebg-preview.png" alt="" width="30px" height="30px">
+    <br>
+    <br>
+    <input type="text">
+    <img src="img/quinto-removebg-preview.png" alt="" width="30px" height="30px">
+    <br>
+    <br>
+    <input type="text">
+
+  </div>
+
+  <div class="comeceaqui">
+    <a href="paginas/login.php"><img src="img/comeceaqui.jpg" alt="" width="100%"></a>
+  </div>
+
+  <div class="sobrenos">
+    <img src="img/sobrenos.png" alt="" width="100%">
+
+  </div>
+
 
 
 </body>
