refazendo tela login

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <ul class="nav-list">
         <li><a href="#">Jogos</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="paginas/login.html">Login</a></li>
         <li><a href="#">Contato</a></li>
         <li><a href="#">Sobre nós</a></li>
         <li><a href="#">Teste</a></li>
@@ -37,36 +37,31 @@
   <div class="center">
     <img src="img/Robo.png" id="robo">
     
+    
+    <div class="ranking" >
+      <h1>Ranking <img src="img/trofeu-removebg-preview.png" alt="" width="30px" height="30px"></h1>
+      <br>
+      <img src="img/primeiro-removebg-preview.png" alt="" width="30px" height="30px" style="margin-top: 5px;">
+      <br>
+      <input type="text">
+      <img src="img/segundo-removebg-preview.png" alt="" width="30px" height="30px" style="margin-top: 5px;">
+      <br>
+      <input type="text">
+      <img src="img/terceiro-removebg-preview.png" alt="" width="30px" height="30px" style="margin-top: 5px;">
+      <br>
+      <input type="text">
+      <img src="img/quarto2-removebg-preview.png" alt="" width="30px" height="30px" style="margin-top: 5px;">
+      <br>
+      <input type="text">
+      <img src="img/quinto-removebg-preview.png" alt="" width="30px" height="30px" style="margin-top: 5px;">
+      <br>
+      <input type="text">
+      </div>
+  
   </div>
   
-  <div class="ranking" >
-    <h1>Ranking <img src="img/trofeu-removebg-preview.png" alt="" width="30px" height="30px"></h1>
-    <br>
-    <img src="img/primeiro-removebg-preview.png" alt="" width="30px" height="30px">
-    <br>
-    <br>
-    <input type="text">
-    <img src="img/segundo-removebg-preview.png" alt="" width="30px" height="30px">
-    <br>
-    <br>
-    <input type="text">
-    <img src="img/terceiro-removebg-preview.png" alt="" width="30px" height="30px">
-    <br>
-    <br>
-    <input type="text">
-    <img src="img/quarto2-removebg-preview.png" alt="" width="30px" height="30px">
-    <br>
-    <br>
-    <input type="text">
-    <img src="img/quinto-removebg-preview.png" alt="" width="30px" height="30px">
-    <br>
-    <br>
-    <input type="text">
-
-  </div>
-
   <div class="comeceaqui">
-    <a href="paginas/login.php"><img src="img/comeceaqui.jpg" alt="" width="100%"></a>
+    <a href="paginas/login.html"><img src="img/comeceaqui.jpg" alt="" width="100%"></a>
   </div>
 
   <div class="sobrenos">
