adição password hash php

--- a/paginas/Cadastro.html
+++ b/paginas/Cadastro.html
@@ -50,7 +50,7 @@
         </form>
       </div>
       <div class="img">
-        <img src="../img/2-removebg-preview-removebg-preview.png">
+        <img src="../img/roboLupa.png">
         
       </div>
     
