--- a/paginas/Cadastro.html
+++ b/paginas/Cadastro.html
@@ -37,7 +37,7 @@
         <div class="title">Faça seu cadastro:</div>
         <form action="cad.php" method="POST">
           <label for="nome">Nome de Usuário:</label><br>
-          <input type="text" name="nome" id="nome"><br>
+          <input type="text" name="nome" id="nome"br><br>
           <label for="email">Email:</label><br>
           <input type="email" name="email" id="email"><br>
           <label for="senha">Senha:</label><br>
@@ -45,7 +45,7 @@
           <label for="Confsenha">Confirme a senha:</label><br>
           <input type="password" name="confsenha" id="confsenha"><br>
           <div style="text-align:center;">
-          <input type="submit" value="enviar" id="btn">
+          <button type="submit" value="enviar" id="btn">Enviar</button>
           </div>
         </form>
       </div>
