--- a/paginas/Cadastro.html
+++ b/paginas/Cadastro.html
@@ -21,7 +21,7 @@
       </div>
       <ul class="nav-list">
         <li><a href="#">Jogos</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="login.php">Login</a></li>
         <li><a href="#">Contato</a></li>
         <li><a href="#">Sobre nós</a></li>
         <li><a href="#">Teste</a></li>
